[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NeonButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/ShakingInput.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
Label/colors/font_color = Color( 0.960784, 0, 0.470588, 1 )
Label/fonts/font = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -206.0
margin_right = 192.0
margin_bottom = -110.0
theme = SubResource( 4 )
text = "Quip Poker"
align = 1
valign = 1
uppercase = true

[node name="UsernameInput" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -120.0
margin_right = 150.0
margin_bottom = -70.0
placeholder_text = "Enter username"

[node name="JoinButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -47.0
margin_right = 100.0
margin_bottom = 3.0
text = "Join"

[node name="HostButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 68.0
text = "Host"

[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
